--- a/settings/0-gmail-email.properties
+++ b/settings/0-gmail-email.properties
@@ -3,6 +3,6 @@ email.user=petridean.ovidiu
 email.password=parola(test)
 email.host=smtp.gmail.com
 email.port=587
-email.enabled=false
-email.default=false
+email.enabled=true
+email.default=true
 email.priority=0
