Added periodical health check

--- a/settings/app.properties
+++ b/settings/app.properties
@@ -6,4 +6,4 @@ sms.url.singtel=https://sms.singtel.com/internetsms/startChatAction.do
 sms.singtel.sender.name=TestMe
 sms.singtel.phone.number=86314872
 sms.singtel.text=Test My SMS
-monitoring.type=null
+monitoring.type=Java
